--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
                     </li>
                 </ol>
             </div>
+            <option value="">Las fases de la droga son...</option>
+            <select name="asd" class="miniCuestionario">
+                <option value="">1.- Uso 2.- Abuso 3.- Dependencia 4.- Experimentacion</option>
+                <option value="">1.- Experimentacion 2.- El uso de la droga, 3.- El abuso de la droga, 4.- La adicción</option>
+                <option value=""></option>
+            </select>
+
         </section>
         <section id="composicion"> 
             <h3>Composición de la Marihuana</h3>
@@ -69,12 +76,25 @@
                 <img src="./assets/comp-marihuana.jpg" alt="">
                 <p>La Marihuana está compuesta por el tetrahidrocannabinol o THC y cannabidiol (CBD). El THC es el que
                     produce el efecto de la droga, y es el que está asociado al consumo de la misma. Se descubrió que el
-                    CBD es un potencial medicamento para la salud, sin embargo, contiene peligros, efectos secundarios,
-                    los cuales puede producir somnolencia, sedación, daño a la fertilidad del hombre, diarrea,
-                    disminución de apetito, irritabilidad y agitación. Eso y en conjunto de que no conocemos del todo el
-                    uso del cannabidiol y que pueda ser un peligro, deja su venta de forma ilegal. Por lo menos, por
-                    ahora.
+                    CBD es un potencial medicamento para la salud. En el futuro podría llegar a solucionar las siguientes condiciones:
                 </p>
+                <ul>
+                    <li>La enfermedad de Alzheimer</li>
+                    <li>La pérdida de apetito</li>
+                    <li>Cáncer</li>
+                    <li>Enfermedad de Crohn (dolores abdominales)</li>
+                    <li>Enfermedades que afecten al sistema inmunológico (como el VIH)</li>
+                    <li>Desordenes alimenticios como la anorexia</li>
+                    <li>Epilepsia</li>
+                    <li>Glaucoma (enfermedad en los ojos que puede causar ceguera)</li>
+                    <li>Afecciones de salud mental como la esquizofrenia y el estrés posttraumático</li>
+                    <li>La esclerosis múltiple</li>
+                    <li>Espasmos músculares</li>
+                    <li>Dolor</li>
+                    <li>Convulsiones</li>
+                    <li>Síndrome de desgaste</li>
+                </ul>
+                <p>Sin embargo, como aún quedó en teorías o no se demostró del todo su uso en todas las condiciones, si ayuda a aliviar las convulsiones, la epilepsia y problemas de salud mental (por la cantidad de dopamina liberada del cuerpo)</p>
             </div>
         </section>
         <section id="efectos">
