--- a/index.html
+++ b/index.html
@@ -64,19 +64,21 @@
             </div>
             <option value="">Las fases de la droga son...</option>
             <select name="asd" class="miniCuestionario">
-                <option value="">1.- Uso 2.- Abuso 3.- Dependencia 4.- Experimentacion</option>
-                <option value="">1.- Experimentacion 2.- El uso de la droga, 3.- El abuso de la droga, 4.- La adicción</option>
-                <option value=""></option>
+                <option value=".">1.- Uso 2.- Abuso 3.- Dependencia 4.- Experimentacion</option>
+                <option value="respCorrecta">1.- Experimentacion 2.- El uso de la droga, 3.- El abuso de la droga, 4.-
+                    La adicción</option>
+                <option value=".">1.- Adicción 2.- Dependencia 3.- Abuso 4.- Uso 5.- Experimentación </option>
             </select>
 
         </section>
-        <section id="composicion"> 
+        <section id="composicion">
             <h3>Composición de la Marihuana</h3>
             <div>
                 <img src="./assets/comp-marihuana.jpg" alt="">
                 <p>La Marihuana está compuesta por el tetrahidrocannabinol o THC y cannabidiol (CBD). El THC es el que
                     produce el efecto de la droga, y es el que está asociado al consumo de la misma. Se descubrió que el
-                    CBD es un potencial medicamento para la salud. En el futuro podría llegar a solucionar las siguientes condiciones:
+                    CBD es un potencial medicamento para la salud. En el futuro podría llegar a solucionar las
+                    siguientes condiciones:
                 </p>
                 <ul>
                     <li>La enfermedad de Alzheimer</li>
@@ -94,8 +96,16 @@
                     <li>Convulsiones</li>
                     <li>Síndrome de desgaste</li>
                 </ul>
-                <p>Sin embargo, como aún quedó en teorías o no se demostró del todo su uso en todas las condiciones, si ayuda a aliviar las convulsiones, la epilepsia y problemas de salud mental (por la cantidad de dopamina liberada del cuerpo)</p>
+                <p>Sin embargo, como aún quedó en teorías o no se demostró del todo su uso en todas las condiciones, si
+                    ayuda a aliviar las convulsiones, la epilepsia y problemas de salud mental (por la cantidad de
+                    dopamina liberada del cuerpo)</p>
             </div>
+            <option value="">La marihuana se compone de...</option>
+            <select name="asd" class="miniCuestionario">
+                <option value=".">1.- THC 2.- CBD 3.- Dopamina</option>
+                <option value=".">1.- Clorohidrato 2.- Bicarbonato de Sodio 3.- Ariel</option>
+                <option value="respCorrecta">Ninguna de las Anteriores</option>
+            </select>
         </section>
         <section id="efectos">
             <h3>Efectos a corto y largo plazo de la marihuana</h3>
@@ -126,35 +136,79 @@
                     síndorme de hiperemesis cannabinoide el cual provoca ciclos regulares de náuseas intensas, vómitos y
                     deshidratación. Esto requiere una atención médica de emergencia.</p>
             </div>
+            <option value="">La droga puede generar a corto y largo plazo</option>
+            <select name="asd" class="miniCuestionario">
+                <option value=".">Delirio, Debilitamiento de memoria, dificultad para pensar, epilepsia, convulsiones
+                </option>
+                <option value="respCorrecta">Limitación de movilidad corporal, Alteración de la percepción del tiempo,
+                    Alucinaciones, Alteración de los sentidos</option>
+                <option value=".">Todas las anteriores</option>
+            </select>
         </section>
         <section id="adolescencia">
             <h3>Droga en los adolescentes</h3>
             <div>
                 <img src="./assets/consumo-de-droga.jpg" alt="">
-                <p>La droga, en los adolescentes, puede generar ansiedad, inasistencia a clases, repetición de cursos o incluso el abandono escolar. Si se produce en un adulto, es probable que deje de ir a trabajar, y, si no tiene dinero, empiece a hacer actos delictivos contra otras personas solo para satisfacer su "necesidad"
-                    En la familia, se denota claramente que está más tiempo solo, o que está más fuera de la casa. También se muestra un elevado de temperamento e irritación.  </p>
-            </div>
+                <p>La droga, en los adolescentes, puede generar ansiedad, inasistencia a clases, repetición de cursos o
+                    incluso el abandono escolar. Si se produce en un adulto, es probable que deje de ir a trabajar, y,
+                    si no tiene dinero, empiece a hacer actos delictivos contra otras personas solo para satisfacer su
+                    "necesidad"
+                    En la familia, se denota claramente que está más tiempo solo, o que está más fuera de la casa.
+                    También se muestra un elevado de temperamento e irritación. </p>
+                </div>
+                <option value="">En el adolescente</option>
+                <select name="asd" class="miniCuestionario">
+                    <option value=".">Genera aumento de rendimiento escolar, relajación físico y mental</option>
+                    <option value=".">A corto plazo no ocurre nada</option>
+                    <option value="respCorrecta">Puede llegar a ocasionar aislamiento del adolescente y bajo rendimiento en la escuela</option>
+                </select>
         </section>
         <section id="tratamiento">
             <h3>Tipos de tratamiento</h3>
             <div>
                 <h3>El tratamiento occidental</h3>
                 <ul>
-                    <li>Terapia cognitivo-conductual: Un tipo de psicoterapia que les enseña a las personas estrategias para identificar y corregir conductas problemáticas a fin de aumentar el autocontrol, dejar de consumir drogas y abordar una diversidad de problemas que con frecuencia acompañan dichas conductas. </li>
-                    <li>Control de contingencias: Un método terapéutico de control que se basa en el control frecuente de la conducta que se desea cambiar y el otorgamiento (o la eliminación) de recompensas tangibles y positivas cuando ocurre (o no) la conducta que se desea cambiar. </li>
-                    <li>Terapia de estímulo motivacional: Una forma sistemática de intervención destinada a producir un cambio rápido de motivación interna. La terapia no intenta tratar a la persona sino movilizar sus recursos internos para el cambio y la participación en el tratamiento.
+                    <li>Terapia cognitivo-conductual: Un tipo de psicoterapia que les enseña a las personas estrategias
+                        para identificar y corregir conductas problemáticas a fin de aumentar el autocontrol, dejar de
+                        consumir drogas y abordar una diversidad de problemas que con frecuencia acompañan dichas
+                        conductas. </li>
+                    <li>Control de contingencias: Un método terapéutico de control que se basa en el control frecuente
+                        de la conducta que se desea cambiar y el otorgamiento (o la eliminación) de recompensas
+                        tangibles y positivas cuando ocurre (o no) la conducta que se desea cambiar. </li>
+                    <li>Terapia de estímulo motivacional: Una forma sistemática de intervención destinada a producir un
+                        cambio rápido de motivación interna. La terapia no intenta tratar a la persona sino movilizar
+                        sus recursos internos para el cambio y la participación en el tratamiento.
                     </li>
                 </ul>
                 <h3>Terapias alternativas</h3>
                 <p>
-                    Un método occidental para el tratamiento de la adicción, puede ser la Acupuntura, que, en resumen, es una técnica china especializada en el tratamiento de dolores y adicciones. Se trata de pinchar con una aguja zonas muy específicas del cuerpo, el cual relaja todo el organismo. De hecho, la OMS la ha reconocido como eficaz en 50 enfermedades.</p>
+                    Un método occidental para el tratamiento de la adicción, puede ser la Acupuntura, que, en resumen,
+                    es una técnica china especializada en el tratamiento de dolores y adicciones. Se trata de pinchar
+                    con una aguja zonas muy específicas del cuerpo, el cual relaja todo el organismo. De hecho, la OMS
+                    la ha reconocido como eficaz en 50 enfermedades.</p>
             </div>
+            <option value="">La droga se puede combatir con</option>
+            <select name="asd" class="miniCuestionario">
+                <option value=".">Creer en Dios</option>
+                <option value="respCorrecta">Meditación</option>
+                <option value=".">Terapias alternativas y occidentales</option>
+            </select>
         </section>
         <section id="caso">
             <h3>Caso de una adicta a la marihuana</h3>
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/iNWSXZa_oUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p> Este es el video de una entrevista de una psicóloga con Rocío, de 21 años en 2017, adicta a la marihuana (o cannabis), estudia en la facultad de filosofía de la UPV, plantea dejar la carrera porque se siente agobiada, ansiosa, no puede dormir bien, y todo esto desde que ella empezó a fumar marihuana con su grupo de amigos. Su hermana la mandó a la psicóloga porque creyó que estaba fumando demasiado, llegando a un nivel preocupante para la misma. No solo eso, si no, que Rocío, excusándose, dice que "no fuma tanto" y "que no es adicta y lo puede controlar", cuando en un momento ella dice que no puede irse a dormir sin fumar una vez. También se excusa diciendo que es la que menos fuma de su grupo de amigos y minimiza la situación que la llevó a la terapia.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/iNWSXZa_oUY"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <p> Este es el video de una entrevista de una psicóloga con Rocío, de 21 años en 2017, adicta a la
+                    marihuana (o cannabis), estudia en la facultad de filosofía de la UPV, plantea dejar la carrera
+                    porque se siente agobiada, ansiosa, no puede dormir bien, y todo esto desde que ella empezó a fumar
+                    marihuana con su grupo de amigos. Su hermana la mandó a la psicóloga porque creyó que estaba fumando
+                    demasiado, llegando a un nivel preocupante para la misma. No solo eso, si no, que Rocío,
+                    excusándose, dice que "no fuma tanto" y "que no es adicta y lo puede controlar", cuando en un
+                    momento ella dice que no puede irse a dormir sin fumar una vez. También se excusa diciendo que es la
+                    que menos fuma de su grupo de amigos y minimiza la situación que la llevó a la terapia.</p>
             </div>
         </section>
     </main>
