--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <option value="">Las fases de la droga son...</option>
             <select name="asd" class="miniCuestionario">
                 <option value=".">1.- Uso 2.- Abuso 3.- Dependencia 4.- Experimentacion</option>
-                <option value="respCorrecta">1.- Experimentacion 2.- El uso de la droga, 3.- El abuso de la droga, 4.-
+                <option value="respCorrecta1">1.- Experimentacion 2.- El uso de la droga, 3.- El abuso de la droga, 4.-
                     La adicción</option>
                 <option value=".">1.- Adicción 2.- Dependencia 3.- Abuso 4.- Uso 5.- Experimentación </option>
             </select>
@@ -104,7 +104,7 @@
             <select name="asd" class="miniCuestionario">
                 <option value=".">1.- THC 2.- CBD 3.- Dopamina</option>
                 <option value=".">1.- Clorohidrato 2.- Bicarbonato de Sodio 3.- Ariel</option>
-                <option value="respCorrecta">Ninguna de las Anteriores</option>
+                <option value="respCorrecta2">Ninguna de las Anteriores</option>
             </select>
         </section>
         <section id="efectos">
@@ -140,7 +140,7 @@
             <select name="asd" class="miniCuestionario">
                 <option value=".">Delirio, Debilitamiento de memoria, dificultad para pensar, epilepsia, convulsiones
                 </option>
-                <option value="respCorrecta">Limitación de movilidad corporal, Alteración de la percepción del tiempo,
+                <option value="respCorrecta3">Limitación de movilidad corporal, Alteración de la percepción del tiempo,
                     Alucinaciones, Alteración de los sentidos</option>
                 <option value=".">Todas las anteriores</option>
             </select>
@@ -160,7 +160,7 @@
                 <select name="asd" class="miniCuestionario">
                     <option value=".">Genera aumento de rendimiento escolar, relajación físico y mental</option>
                     <option value=".">A corto plazo no ocurre nada</option>
-                    <option value="respCorrecta">Puede llegar a ocasionar aislamiento del adolescente y bajo rendimiento en la escuela</option>
+                    <option value="respCorrecta4">Puede llegar a ocasionar aislamiento del adolescente y bajo rendimiento en la escuela</option>
                 </select>
         </section>
         <section id="tratamiento">
@@ -190,8 +190,8 @@
             <option value="">La droga se puede combatir con</option>
             <select name="asd" class="miniCuestionario">
                 <option value=".">Creer en Dios</option>
-                <option value="respCorrecta">Meditación</option>
-                <option value=".">Terapias alternativas y occidentales</option>
+                <option value=".">Meditación</option>
+                <option value="respCorrecta5">Terapias alternativas y occidentales</option>
             </select>
         </section>
         <section id="caso">
@@ -210,6 +210,9 @@
                     momento ella dice que no puede irse a dormir sin fumar una vez. También se excusa diciendo que es la
                     que menos fuma de su grupo de amigos y minimiza la situación que la llevó a la terapia.</p>
             </div>
+        </section>
+        <section id="resultado">
+            <button id="result">Chequear resultado</button>
         </section>
     </main>
     <footer>
