--- a/index.html
+++ b/index.html
@@ -62,14 +62,16 @@
                     </li>
                 </ol>
             </div>
-            <option value="">Las fases de la droga son...</option>
-            <select name="asd" class="miniCuestionario">
-                <option value=".">1.- Uso 2.- Abuso 3.- Dependencia 4.- Experimentacion</option>
-                <option value="respCorrecta1">1.- Experimentacion 2.- El uso de la droga, 3.- El abuso de la droga, 4.-
-                    La adicción</option>
-                <option value=".">1.- Adicción 2.- Dependencia 3.- Abuso 4.- Uso 5.- Experimentación </option>
-            </select>
-
+            <p class="frases">Las fases de la droga son...</p>
+            <div name="asd" class="miniCuestionario">
+                <label value=".">1.- Uso 2.- Abuso 3.- Dependencia 4.- Experimentacion</label>
+                <input type="radio" name="asd1" id="" value="">
+                <label value="respCorrecta1">1.- Experimentacion 2.- El uso de la droga, 3.- El abuso de la droga, 4.-
+                    La adicción</label>
+                    <input type="radio" name="asd1" id="" value="respCorrecta1">
+                <label value=".">1.- Adicción 2.- Dependencia 3.- Abuso 4.- Uso 5.- Experimentación </label>
+                <input type="radio" name="asd1" id="" value="">
+            </div>
         </section>
         <section id="composicion">
             <h3>Composición de la Marihuana</h3>
@@ -100,12 +102,15 @@
                     ayuda a aliviar las convulsiones, la epilepsia y problemas de salud mental (por la cantidad de
                     dopamina liberada del cuerpo)</p>
             </div>
-            <option value="">La marihuana se compone de...</option>
-            <select name="asd" class="miniCuestionario">
-                <option value=".">1.- THC 2.- CBD 3.- Dopamina</option>
-                <option value=".">1.- Clorohidrato 2.- Bicarbonato de Sodio 3.- Ariel</option>
-                <option value="respCorrecta2">Ninguna de las Anteriores</option>
-            </select>
+            <p class="frases">La marihuana se compone de...</p>
+            <div name="asd" class="miniCuestionario">
+                <label value=".">1.- THC 2.- CBD 3.- Dopamina</label>
+                <input type="radio" name="asd2" id="" value="">
+                <label value=".">1.- Clorohidrato 2.- Bicarbonato de Sodio 3.- Ariel</label>
+                <input type="radio" name="asd2" id="" value="">
+                <label value="respCorrecta2">Ninguna de las Anteriores</label>
+                <input type="radio" name="asd2" id="" value="respCorrecta2">
+            </div>
         </section>
         <section id="efectos">
             <h3>Efectos a corto y largo plazo de la marihuana</h3>
@@ -136,14 +141,17 @@
                     síndorme de hiperemesis cannabinoide el cual provoca ciclos regulares de náuseas intensas, vómitos y
                     deshidratación. Esto requiere una atención médica de emergencia.</p>
             </div>
-            <option value="">La droga puede generar a corto y largo plazo</option>
-            <select name="asd" class="miniCuestionario">
-                <option value=".">Delirio, Debilitamiento de memoria, dificultad para pensar, epilepsia, convulsiones
-                </option>
-                <option value="respCorrecta3">Limitación de movilidad corporal, Alteración de la percepción del tiempo,
-                    Alucinaciones, Alteración de los sentidos</option>
-                <option value=".">Todas las anteriores</option>
-            </select>
+            <p class="frases">La droga puede generar a corto y largo plazo</p>
+            <div name="asd" class="miniCuestionario">
+                <label value=".">Delirio, Debilitamiento de memoria, dificultad para pensar, epilepsia, convulsiones
+                </label>
+                <input type="radio" name="asd3" id="">
+                <label value="respCorrecta3">Limitación de movilidad corporal, Alteración de la percepción del tiempo,
+                    Alucinaciones, Alteración de los sentidos</label>
+                    <input type="radio" name="asd3" id="" value="respCorrecta3">
+                <label value=".">Todas las anteriores</label>
+                <input type="radio" name="asd3" id="">
+            </div>
         </section>
         <section id="adolescencia">
             <h3>Droga en los adolescentes</h3>
@@ -156,12 +164,15 @@
                     En la familia, se denota claramente que está más tiempo solo, o que está más fuera de la casa.
                     También se muestra un elevado de temperamento e irritación. </p>
                 </div>
-                <option value="">En el adolescente</option>
-                <select name="asd" class="miniCuestionario">
-                    <option value=".">Genera aumento de rendimiento escolar, relajación físico y mental</option>
-                    <option value=".">A corto plazo no ocurre nada</option>
-                    <option value="respCorrecta4">Puede llegar a ocasionar aislamiento del adolescente y bajo rendimiento en la escuela</option>
-                </select>
+                <p class="frases">En el adolescente</p>
+                <div name="asd" class="miniCuestionario">
+                    <label value=".">Genera aumento de rendimiento escolar, relajación físico y mental</label>
+                    <input type="radio" name="asd4" id="">
+                    <label value=".">A corto plazo no ocurre nada</label>
+                    <input type="radio" name="asd4" id="">
+                    <label value="respCorrecta4">Puede llegar a ocasionar aislamiento del adolescente y bajo rendimiento en la escuela</label>
+                    <input type="radio" name="asd4" id="" value="respCorrecta4">
+                </div>
         </section>
         <section id="tratamiento">
             <h3>Tipos de tratamiento</h3>
@@ -187,12 +198,15 @@
                     con una aguja zonas muy específicas del cuerpo, el cual relaja todo el organismo. De hecho, la OMS
                     la ha reconocido como eficaz en 50 enfermedades.</p>
             </div>
-            <option value="">La droga se puede combatir con</option>
-            <select name="asd" class="miniCuestionario">
-                <option value=".">Creer en Dios</option>
-                <option value=".">Meditación</option>
-                <option value="respCorrecta5">Terapias alternativas y occidentales</option>
-            </select>
+            <p class="frases">La droga se puede combatir con</p>
+            <div name="asd" class="miniCuestionario">
+                <label value=".">Creer en Dios</label>
+                <input type="radio" name="asd5" id="">
+                <label value=".">Meditación</label>
+                <input type="radio" name="asd5" id="">
+                <label value="respCorrecta5">Terapias alternativas y occidentales</label>
+                <input type="radio" name="asd5" id="" value="respCorrecta5">
+            </div>
         </section>
         <section id="caso">
             <h3>Caso de una adicta a la marihuana</h3>
