--- a/index.html
+++ b/index.html
@@ -191,12 +191,9 @@
                         sus recursos internos para el cambio y la participación en el tratamiento.
                     </li>
                 </ul>
-                <h3>Terapias alternativas</h3>
-                <p>
-                    Un método occidental para el tratamiento de la adicción, puede ser la Acupuntura, que, en resumen,
-                    es una técnica china especializada en el tratamiento de dolores y adicciones. Se trata de pinchar
-                    con una aguja zonas muy específicas del cuerpo, el cual relaja todo el organismo. De hecho, la OMS
-                    la ha reconocido como eficaz en 50 enfermedades.</p>
+                <h3>¿Qué son las terapias alternativas?</h3>
+                <p>Terapia alternativa hace referencia a tratamiento no convencional que se usa en lugar del tratamiento convencional (las de arriba son ejemplos). Estas técnicas no poseen argumento científico, y, en muchas ocasiones, se basa exclusivamente en el efecto placebo. Algunas de estas pueden ser la hipnoterapia, la fuerte fé, la meditación o cualquier otro método pseudocientífico. Se basa sobre todo en el efecto placebo (aquel que refleja un efecto positivo sin motivo científico aparente)</p>
+
             </div>
             <p class="frases">La droga se puede combatir con</p>
             <div name="asd" class="miniCuestionario">
