--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                     problemas en comparación a los que no estuvieron expuestos a la droga. La marihuana genera el
                     síndorme de hiperemesis cannabinoide el cual provoca ciclos regulares de náuseas intensas, vómitos y
                     deshidratación. Esto requiere una atención médica de emergencia.</p>
+                    <p>Otros problemas recurrentes en la vida adulta en relación al Cannabis o la Marihuana, es que el individuo termina siendo menos productivo, se aleja de las relaciones de amigos, se hacen juntas entre los que toman la sustancia, en casos más extremos llega a mentir a sus familiares, les roban sus pertenencias o incluso recurren a robar solo para poder satisfacer su abstinencia</p>
             </div>
             <p class="frases">La droga puede generar a corto y largo plazo</p>
             <div name="asd" class="miniCuestionario">
