--- a/index.html
+++ b/index.html
@@ -207,20 +207,10 @@
             </div>
         </section>
         <section id="caso">
-            <h3>Caso de una adicta a la marihuana</h3>
+            <h3>Caso de un adicto a la marihuana: Brad Pitt</h3>
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/iNWSXZa_oUY"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-                <p> Este es el video de una entrevista de una psicóloga con Rocío, de 21 años en 2017, adicta a la
-                    marihuana (o cannabis), estudia en la facultad de filosofía de la UPV, plantea dejar la carrera
-                    porque se siente agobiada, ansiosa, no puede dormir bien, y todo esto desde que ella empezó a fumar
-                    marihuana con su grupo de amigos. Su hermana la mandó a la psicóloga porque creyó que estaba fumando
-                    demasiado, llegando a un nivel preocupante para la misma. No solo eso, si no, que Rocío,
-                    excusándose, dice que "no fuma tanto" y "que no es adicta y lo puede controlar", cuando en un
-                    momento ella dice que no puede irse a dormir sin fumar una vez. También se excusa diciendo que es la
-                    que menos fuma de su grupo de amigos y minimiza la situación que la llevó a la terapia.</p>
+                <p>En una entrevista que tuvó para The New York Times Brad Pitt confesó que en los años 90, momento donde ya era un actor exitoso, empezó a fumar marihuna de manera frecuente, ya que ser el centro de atención no le gustaba, causandole incomodidad, y el hecho de fumar y tomar alcohol era una via de escape para él.
+                    La paternidad fue lo que lo ayudó a dejar esta adicción, ya que cuando sus hijas lo encontraron fumando fue un momento desagradable para todos. Esta situación dio a recapacitar a Brad Pitt del mal habito que tenía, por lo que en 2011 dejó de fumar marihuana de manera habitual.</p>
             </div>
         </section>
         <section id="resultado">
